--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,8 @@
+# file: ci.yml
 name: CI
+
+permissions:
+  contents: read # Needed to checkout the code
 
 on:
   push:
@@ -7,16 +11,23 @@ on:
     branches: [main]
   workflow_dispatch:
 
+# Cancel redundant runs on PRs, but let pushes to main complete
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/main' && github.sha || github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   test:
     name: Test Suite
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false # Allow all matrix jobs to finish
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        # Keep specific versions for stability, ensure 1.76 is still relevant or update
         rust: [stable, beta, nightly, "1.76"]
         exclude:
-          # Exclude some builds on Windows and macOS to speed up CI
+          # Keep exclusions if they significantly speed up CI and are acceptable
           - os: windows-latest
             rust: beta
           - os: windows-latest
@@ -26,43 +37,75 @@ jobs:
           - os: macos-latest
             rust: nightly
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain (${{ matrix.rust }})
+        uses: dtolnay/rust-toolchain@stable # Use stable tag
         with:
           toolchain: ${{ matrix.rust }}
-      - uses: Swatinem/rust-cache@v2
+
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Run tests
-        run: cargo test --workspace --all-features
+        run: cargo test --workspace --all-features --locked
+        shell: bash
 
   lints:
     name: Lints
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        rust: [stable, nightly]
+      fail-fast: false
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain (stable)
+        uses: dtolnay/rust-toolchain@stable # Use stable tag
         with:
           toolchain: stable
           components: rustfmt, clippy
-      - uses: Swatinem/rust-cache@v2
 
-      - name: Run cargo fmt
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
+
+      - name: Run cargo fmt (check)
         run: cargo fmt --all -- --check
+        shell: bash
 
       - name: Run cargo clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        # Add --locked to ensure lockfile is respected
+        run: cargo clippy --workspace --all-targets --all-features --locked -- -D warnings
+        shell: bash
 
   docs:
     name: Docs
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        rust: [stable, nightly]
+      fail-fast: false
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain (stable)
+        uses: dtolnay/rust-toolchain@stable # Use stable tag
         with:
           toolchain: stable
-      - uses: Swatinem/rust-cache@v2
 
-      - name: Check documentation
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
+
+      - name: Check documentation compilation
         env:
           RUSTDOCFLAGS: -D warnings
-        run: cargo doc --no-deps --document-private-items --all-features
+        # Add --locked
+        # Consider removing --no-deps if you want to catch doc issues in public dependencies
+        run: cargo doc --workspace --no-deps --document-private-items --all-features --locked
+        shell: bash
